--- a/style.css
+++ b/style.css
@@ -1,3 +1,57 @@
-ul{
-    margin-top: 115px;
+*{
+    margin: 0;
+    padding:0 ;
+    font-family:'Poppins', sans-serif ;
+    box-sizing: border-box;
+}
+body{
+    background: #080808;
+    color: #fff;
+}
+#header{
+    width: 100%;
+    height: 100vh;
+    background-image:url(image);
+    background-size: cover; 
+    background-position: center;
+
+}
+.container{
+    padding: 10px 10% ;
+}
+nav{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+.logo{
+    width: 140px;
+}
+nav ul li{
+    display: inline-block;
+    list-style: none;
+    margin: 10px 20px;
+}
+nav ul li a{
+    text-decoration:none;
+    font-size: 18px;
+    /* list-style: none; */
+    position: relative; 
+}
+nav ul li a::after{
+    content:'';
+    width: 70%;
+    margin-left: 10px;
+    height: 2px;
+    background :#ff004f;
+    position: absolute;
+    left:0;
+    bottom: 0px ;
+    transition: 0.5s;
+    
+}
+nav ul li a:hover ::after{
+    color: rgb(255, 140, 0);
+    width: 100%;
 }
