--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body{
 #header{
     width: 100%;
     height: 100vh;
-    background-image: url(img/background.webp);
+    background-image: url();
     background-size: cover; 
     background-position: center;
 
@@ -111,6 +111,20 @@ nav ul li a:hover::after{
 }
 .tab-links.active-link::after{
     width: 50px;
+}
+.tab-contents ul li{
+    list-style: none;
+    margin: 10px 0;
+}
+.tab-contents ul li span{
+    color: #ff9100;
+    font-size: 14px;
+}
+.tab-contents{
+    display: none;
+}
+.tab-contents.active-tab{
+    display: block;
 }
 
 
